# api/controllers/AdminHotelApi.js
@@ -7,9 +7,11 @@ const AdminHotelRoomFacilitiesModel = require('../models/HotelAdmin/AdminHotelRo
 const AdminHotelRoomBeddingModel = require('../models/HotelAdmin/AdminHotelRoomBedding');
 const AdminHotelRoomInclusionsModel = require('../models/HotelAdmin/AdminHotelRoomInclusions');
 const AdminHotelRoomRatesModel = require('../models/HotelAdmin/AdminHotelRoomRates');
+const AdminHotelStopSaleModel = require('../models/HotelAdmin/AdminHotelStopSale');
 
 const crudService = require('../services/crud.service');
 const schema = require('../schemas/AdminHotel');
+const moment = require('moment');
 
 const AdminHotelApi = () => {
 
@@ -106,6 +108,8 @@ const AdminHotelApi = () => {
         try {
             if (req.params.hotelId) {
                 // DELETE ROOM REALTED STUFF
+                await crudService.destroy(AdminHotelStopSaleModel, { hotelId: req.params.hotelId });
+                await crudService.destroy(AdminHotelRoomRatesModel, { hotelId: req.params.hotelId });
                 await crudService.destroy(AdminHotelRoomInclusionsModel, { hotelId: req.params.hotelId });
                 await crudService.destroy(AdminHotelRoomBeddingModel, { hotelId: req.params.hotelId });
                 await crudService.destroy(AdminHotelRoomFacilitiesModel, { hotelId: req.params.hotelId });
@@ -244,6 +248,14 @@ const AdminHotelApi = () => {
                 for (let room of propertyData.room) {
                     room.rates = responseRoomRates.filter(t => t.roomId === parseInt(room.id));
                 }
+
+
+                let responseStopSells = await crudService.get(AdminHotelStopSaleModel, {
+                    where: { isDeleted: false, hotelId: req.params.hotelId },
+                    attributes: ['id', 'date', 'roomId'],
+                    distinct: true,
+                });
+                propertyData.stopSales = responseStopSells || [];
                 return res.status(200).json({
                     code: 2000,
                     success: true,
@@ -470,7 +482,6 @@ const AdminHotelApi = () => {
                         response = await crudService.update(AdminHotelRoomRatesModel, { hotelId: req.params.hotelId, roomId: req.params.roomId, id: req.params.id }, reqData);
                         response = { id: req.params.id };
                     } else {
-                        console.log(reqData)
                         let res = await crudService.insert(AdminHotelRoomRatesModel, reqData);
                         response = { id: res.id };
                     }
@@ -481,7 +492,12 @@ const AdminHotelApi = () => {
                         data: response
                     });
                 } else {
-
+                    return res.status(200).json({
+                        code: 4004,
+                        success: false,
+                        message: 'Invalid Hotel Id or Room Id',
+                        data: {},
+                    });
                 }
             } catch (error) {
                 console.error(error);
@@ -500,8 +516,151 @@ const AdminHotelApi = () => {
                 error: err,
             });
         });
-
     };
+
+    insertStopSale = (arrayOfStopSale, hotelId, roomId) => {
+        return new Promise(async (resolve, reject) => {
+            try {
+                for (let stopSaleObj of arrayOfStopSale) {
+                    stopSaleObj.hotelId = hotelId;
+                    stopSaleObj.roomId = roomId;
+                    let whereClause = { hotelId: stopSaleObj.hotelId, roomId: stopSaleObj.roomId, date: stopSaleObj.date };
+                    let isStopSellExists = await crudService.get(AdminHotelStopSaleModel, {
+                        where: whereClause,
+                        attributes: ['id', 'date', 'hotelId', 'roomId'],
+                        distinct: true
+                    });
+                    if (isStopSellExists && isStopSellExists.length > 0) {
+                        if (stopSaleObj.stopSell) {
+                            await crudService.update(AdminHotelStopSaleModel, whereClause, stopSaleObj, false);
+                        } else {
+                            await crudService.destroy(AdminHotelStopSaleModel, whereClause);
+                        }
+                    } else {
+                        if (stopSaleObj.stopSell) {
+                            await crudService.insert(AdminHotelStopSaleModel, stopSaleObj);
+                        } else {
+                            await crudService.destroy(AdminHotelStopSaleModel, whereClause);
+                        }
+                    }
+                }
+                let allStopSells = await crudService.get(AdminHotelStopSaleModel, {
+                    where: { isDeleted: false, hotelId: hotelId, roomId: roomId },
+                    attributes: ['id', 'date', 'hotelId', 'roomId'],
+                    distinct: true,
+                });
+                resolve(allStopSells);
+            } catch (error) {
+                console.error(error);
+                reject(error);
+            }
+        });
+    }
+
+    const stopSalesRange = (req, res) => {
+        crudService.validate(req.body, schema.stopSalesRange).then(async (reqData) => {
+            try {
+                reqData.hotelId = req.params.hotelId;
+                reqData.roomId = req.params.roomId;
+                let isHotelIdExists = isHotelIdValid(req.params.hotelId);
+                let isRoomIdExists = isRoomIdValid(req.params.hotelId, req.params.roomId);
+                if (isHotelIdExists && isRoomIdExists) {
+                    let arrayOfStopSale = [];
+                    let dateInc = moment(reqData.date_from, 'YYYY-MM-DD');
+                    for (let i = 0; moment(dateInc, 'YYYY-MM-DD') <= moment(reqData.date_to, 'YYYY-MM-DD'); i++) {
+                        arrayOfStopSale.push({
+                            date: moment(dateInc),
+                            stopSell: reqData.stopSell
+                        });
+                        dateInc = moment(dateInc, 'YYYY-MM-DD').add('day', 1).format('YYYY-MM-DD');
+                    }
+                    crudService.validate({ stopSales: arrayOfStopSale }, schema.stopSales).then(async (reqData) => {
+                        let response = await insertStopSale(arrayOfStopSale, req.params.hotelId, req.params.roomId);
+                        return res.status(200).json({
+                            code: 2000,
+                            success: true,
+                            message: `Stop Sales saved successfully.`,
+                            data: response
+                        });
+                    }).catch(err => {
+                        console.error(err);
+                        return res.status(200).json({
+                            code: 4002,
+                            success: false,
+                            message: 'Validation Failed',
+                            error: err,
+                        });
+                    });
+                } else {
+                    return res.status(200).json({
+                        code: 4004,
+                        success: false,
+                        message: 'Invalid Hotel Id or Room Id',
+                        data: {},
+                    });
+                }
+            } catch (error) {
+                console.error(error);
+                return res.status(500).json({
+                    code: 5000,
+                    message: 'Internal server error',
+                    error: error,
+                });
+            }
+        }).catch(err => {
+            console.error(err);
+            return res.status(200).json({
+                code: 4002,
+                success: false,
+                message: 'Validation Failed',
+                error: err,
+            });
+        });
+    };
+
+
+    const stopSales = (req, res) => {
+        crudService.validate(req.body, schema.stopSales).then(async (reqData) => {
+            try {
+                reqData.hotelId = req.params.hotelId;
+                reqData.roomId = req.params.roomId;
+                let isHotelIdExists = isHotelIdValid(req.params.hotelId);
+                let isRoomIdExists = isRoomIdValid(req.params.hotelId, req.params.roomId);
+                if (isHotelIdExists && isRoomIdExists) {
+                    let response = await insertStopSale(reqData.stopSales, req.params.hotelId, req.params.roomId);
+                    return res.status(200).json({
+                        code: 2000,
+                        success: true,
+                        message: `Stop Sales saved successfully.`,
+                        data: response
+                    });
+                } else {
+                    return res.status(200).json({
+                        code: 4004,
+                        success: false,
+                        message: 'Invalid Hotel Id or Room Id',
+                        data: {},
+                    });
+                }
+            } catch (error) {
+                console.error(error);
+                return res.status(500).json({
+                    code: 5000,
+                    message: 'Internal server error',
+                    error: error,
+                });
+            }
+        }).catch(err => {
+            console.error(err);
+            return res.status(200).json({
+                code: 4002,
+                success: false,
+                message: 'Validation Failed',
+                error: err,
+            });
+        });
+    };
+
 
     return {
         createProperty,
@@ -511,7 +670,9 @@ const AdminHotelApi = () => {
         getPropertyById,
         assignFacilities,
         saveRoom,
-        saveRoomRates
+        saveRoomRates,
+        stopSalesRange,
+        stopSales
     };
 };
 module.exports = AdminHotelApi;
