# swagger/json/swagger.yaml
@@ -1889,6 +1889,85 @@
               description: "Internal Server Error"
               schema:
                 $ref: "#/definitions/Error-Response"
+                
+    /admin-hotel/stop-sell/range/{hotelId}/{roomId}:
+        post:
+          tags:
+          - "Admin Hotel"
+          summary: "Update hotel StopSell based on hotelId & room Id by Range"
+          description: ""
+          operationId: "stopSellRange"
+          consumes:
+          - "application/json"
+          produces:
+          - "application/json"
+          parameters:
+          - name: "hotelId"
+            in: "path"
+            description: "ID of hotel to return"
+            required: true
+            type: "integer"
+            format: "int64"
+          - name: "roomId"
+            in: "path"
+            description: "ID of room to return"
+            required: true
+            type: "integer"
+            format: "int64"
+          - in: "body"
+            name: "object"
+            description: "obj with dates"
+            required: true
+            schema:
+              $ref: "#/definitions/Stop-Sell-Range"
+          responses:
+            200:
+              description: "Success"
+              schema:
+                $ref: "#/definitions/Success-Response"
+            500:
+              description: "Internal Server Error"
+              schema:
+                $ref: "#/definitions/Error-Response"
+    /admin-hotel/stop-sell/single/{hotelId}/{roomId}:
+        post:
+          tags:
+          - "Admin Hotel"
+          summary: "Update hotel StopSell based on hotelId & room Id"
+          description: ""
+          operationId: "stopSellSingle"
+          consumes:
+          - "application/json"
+          produces:
+          - "application/json"
+          parameters:
+          - name: "hotelId"
+            in: "path"
+            description: "ID of hotel to return"
+            required: true
+            type: "integer"
+            format: "int64"
+          - name: "roomId"
+            in: "path"
+            description: "ID of room to return"
+            required: true
+            type: "integer"
+            format: "int64"
+          - in: "body"
+            name: "stopSales"
+            description: "Array of obj with dates"
+            required: true
+            schema:
+              $ref: "#/definitions/Stop-Sell"
+          responses:
+            200:
+              description: "Success"
+              schema:
+                $ref: "#/definitions/Success-Response"
+            500:
+              description: "Internal Server Error"
+              schema:
+                $ref: "#/definitions/Error-Response"
     
   definitions:
     Country:
@@ -2257,6 +2336,35 @@
             type: integer
         cut_of_day:
             type: integer
+    Stop-Sell:  
+      type: "object"
+      required:
+       - "stopSales"
+      properties:
+       stopSales:
+          type: array
+          items:
+             properties:
+                  date:
+                     description: date(YYYY-MM-DD)
+                     type: string
+                  stopSell:
+                    type: boolean  
+    Stop-Sell-Range:  
+      type: "object"
+      required:
+       - "date_from"
+       - "date_to"
+       - "stopSell"
+      properties:
+          date_from:
+             description: date(YYYY-MM-DD)
+             type: string
+          date_to:
+             description: date(YYYY-MM-DD)
+             type: string
+          stopSell:
+            type: boolean
     Success-Response:
       type: "object"
       properties:
